# sidabari

./: CLAUDE.md  LICENSE  README.md  SIDABARI_SPEC.md  index.html  package-lock.json  package.json
docs/ec2-diag-setup/: README.md  install.sh  sidabari-collect.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/: append-event.js  gate.js
src-tauri/src/: build.rs  claude_safety.rs  config.rs  diag_setup.rs  diag_ssh_allow.rs  hook_installer.rs  hooks_bus.rs  known_hosts.rs  lib.rs  main.rs  pty.rs  sftp.rs  ssh.rs  ssh_exec.rs
src/components/dashboard/: DiagnosticDashboard.tsx
src/components/layout/: MainLayout.tsx  MainToolbar.tsx
src/components/modals/: AddClaudeTabModal.tsx  DiagSetupModal.tsx  DiagnosticDialog.tsx  DiagnosticFloatingPanel.tsx  GateModal.tsx  HostKeyPromptModal.tsx  SettingsModal.tsx
src/components/monitor/: ActivityIndicator.tsx  HookBridge.tsx  MonitorMatcher.tsx  SshGraceWatcher.tsx
src/components/panels/: ClaudeTabsPanel.tsx  ConsolePanel.tsx  EC2Panel.tsx  MainClaudePanel.tsx
src/components/terminal/: PtyTerminal.tsx  SshTerminal.tsx  Terminal.tsx  mockContent.ts
src/lib/: ansi.ts  build.ts  claudeSafety.ts  config.ts  diagSetup.ts  diagSshAllow.ts  diagnostic.ts  hooks.ts  parseDiagnostic.ts  pty.ts  ssh.ts
src/store/: useAppStore.ts
